--- a/web.config
+++ b/web.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<configuration>
+<configuration>>>><<<>>>>
     <system.webServer>
-        <staticContent>
+        <statcvx xvxicContent>
             <remove fileExtension=".woff" />
             <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
             <remove fileExtension=".ttf" />
